force-app/main/default/objects/ContactPointPhone/fields/Occurrence_Number__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Number__c</fullName>
    <complianceGroup>Source - OCV;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Lead ID + Sequence to identify associated Lead Flex field record of Lead records.</description>
    <label>Occurrence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>