force-app/main/default/objects/ContactPointPhone/fields/Previous_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Previous_Related_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field holds the ID of the previous account that this contact point was related to. If the contact point is currently related to an account, this field will hold the ID of the account that was related to the contact point before the current relationship.</description>
    <label>Previous Related Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>