force-app/main/default/objects/ContactPointPhone/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <description>Verification Method by which the Number got Verified</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Verification Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>