force-app/main/default/objects/ContactPointPhone/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Sensitive_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Mobile Verification Status from Source System</description>
    <label>Verification Status</label>
    <type>Checkbox</type>
</CustomField>