force-app/main/default/objects/ContactPointPhone/recordTypes/Organisation.recordType-meta.xml
<RecordType>
    <fullName>Organisation</fullName>
    <active>true</active>
    <label>Organisation</label>
</RecordType>