force-app/main/default/objects/ContactPointPhone/validationRules/CCRM_Restrict_MobileUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Restrict_MobileUpdate</fullName>
    <active>true</active>
    <description>Prevents updates to Contact Point Phone records when certain Usage Type for DCRM users</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = FALSE,
    $Permission.CCRM_Skip_Validation = FALSE,
    $Profile.Name = $Label.CCRM_Profile_Name,
    OR(
        ISPICKVAL(UsageType, &quot;Security Mobile&quot;),
        ISPICKVAL(UsageType, &quot;Business Phone&quot;),
        ISPICKVAL(UsageType, &quot;Primary Business Telephone&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You are not authorized to create or edit phone record with this Usage Type.</errorMessage>
</ValidationRule>