force-app/main/default/objects/ContactPointPhone/validationRules/DCRM_Restrict_Details_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>DCRM_Restrict_Details_Update</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
$Permission.CCRM_Skip_Validation = false &amp;&amp;
$Profile.Name = $Label.MLCRM_Profile_Name &amp;&amp;
Customer_Name__c != NULL &amp;&amp;
NOT(
    OR(
        AND(Customer_Name__r.Is_Prospect__c,Customer_Name__r.isPersonAccount),
        AND(  
            Customer_Name__r.isPersonAccount,
            Customer_Name__r.ANZx_Customer__c = false,
            Customer_Name__r.Source_System_Name__c = $Label.CCRM_Source_System_Name,
            OR(
                ISPICKVAL(Customer_Name__r.FinServ__Status__c, &apos;Active&apos;),
                ISPICKVAL(Customer_Name__r.FinServ__Status__c, &apos;Inactive&apos;)
            )
        ),
        Customer_Name__r.OCV_Event_Version__c != 0
    )
)</errorConditionFormula>
    <errorMessage>You are not allowed to update this Phone record.</errorMessage>
</ValidationRule>