force-app/main/default/objects/ContactPointPhone/validationRules/MLCRM_Restrict_UsageTypeUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_Restrict_UsageTypeUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
$Permission.CCRM_Skip_Validation = false &amp;&amp;
$Profile.Name = $Label.MLCRM_Profile_Name &amp;&amp;
ISCHANGED(UsageType)</errorConditionFormula>
    <errorMessage>Usage Type cannot be updated.</errorMessage>
</ValidationRule>